--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "queue": "nodemon src/queue.js",
-    "start": "node src/server.js"
+    "start": "nodemon src/server.js"
   },
   "dependencies": {
     "@sentry/node": "5.7.1",
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
+    "heroku": "^7.36.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
     "multer": "^1.4.2",
